# graphrag-sec-edgar

./: .env.example  README.md  docker-compose.yml  pyproject.toml
data/sec_edgar_sample/: AAPL_10K.json  GOOGL_10K.json  META_10K.json  MSFT_10K.json  NVDA_10K.json  README.md  TSLA_10K.json  _index.json
demo/: index.html  predictions.json
docs/: architecture.md  decisions.md  scalability.md
scripts/: fetch_sec_10k.py
src/: config.py
src/api/: main.py  schemas.py
src/engine/: graphrag.py
src/eval/: queries.py  runner.py
src/graph/: fixture.py  store.py
src/router/: classifier.py
tests/: test_classifier.py  test_engine.py  test_eval_runner.py  test_graph_store.py
