    [project]
    name = "graphrag-sec-edgar"
    version = "0.1.0"
    description = "GraphRAG over SEC EDGAR — Neo4j + multi-hop Cypher + vector hybrid"
    requires-python = ">=3.11,<3.14"
    license = { text = "MIT" }
    dependencies = [
        "fastapi==0.115.0",
"uvicorn[standard]==0.32.0",
"pydantic==2.9.2",
"pydantic-settings==2.6.0",
"python-dotenv==1.0.1",
"httpx==0.27.2",
"tenacity==9.0.0",
"loguru==0.7.2",
"anthropic==0.39.0",
"langchain-anthropic==0.2.4",
"langgraph==0.2.45",
"neo4j==5.25.0",
"sentence-transformers==3.2.1",
"voyageai==0.3.2",
"sec-api==1.0.27",
"psycopg[binary,pool]==3.2.3",
    ]

    [project.optional-dependencies]
    dev = ["pytest==8.3.3", "pytest-asyncio==0.24.0", "ruff==0.6.9", "black==24.10.0", "mypy==1.11.2"]
